--- a/views/index.html
+++ b/views/index.html
@@ -1,22 +1,22 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Introduction to HTML sematic tags" />
-    <meta name=" keywords" content=" HTML,DOM,HTML, tags, attributes" />
-    <meta name=" author" content="Nicholas Ciavone" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Muscle Maker</title>
-    <link rel="stylesheet" href="../public/css/styleMM.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-    <link rel="bootstrap" href="../public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../public/css/materialize.min.css">
-    <!--This is from Font Awesome-->
-    <script src="https://kit.fontawesome.com/4d808d741c.js" crossorigin="anonymous"></script>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Input HTML Form Pack by Tooplate</title>
+    <!--
 
+    Template 2105 Input
+
+	http://www.tooplate.com/view/2105-input
+
+    -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/materialize.min.css">
+    <link rel="stylesheet" href="css/tooplate.css">
 </head>
 
 <body id="home">
