--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
     <meta name=" author" content="Nicholas Ciavone" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muscle Maker</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="stylesheet" href="../public/css/styleMM.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="bootstrap" href="../public/css/bootstrap.min.css">
