--- a/views/register.html
+++ b/views/register.html
@@ -5,11 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Register - Input Form by Tooplate</title>
-	<!--
-    Template 2105 Input
-	http://www.tooplate.com/view/2105-input
-	-->
+    <title>Update Page</title>
     <link rel="stylesheet" href="../public/css/styleMM.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="bootstrap" href="../public/css/bootstrap.min.css">
@@ -17,6 +13,25 @@
 </head>
 
 <body id="register">
+     <!-- Nav Bar -->
+     <nav class="navbar background">
+        <!-- we have used list tag that is ul 
+             to list the items-->
+        <ul class="nav-list">
+            <li><a href="../views/index.ejs">Home</a></li>
+            <li><a href="../views/login.html">Login</a></li>
+            <li><a href="../views/signup.html">Sign-Up</a></li>
+            <li><a href="../views/survey.html">Survey</a></li>
+            <li><a href="..//views/register.html">Update</a></li>
+        </ul>
+        <!-- we have used rightnav in order to design
+             the seachbar properly by using CSS-->
+        <div class="rightNav">
+      <!-- the value that search bar will take is text -->
+            <input type="text" name="search" id="search" />
+            <button class="btn btn-sm">Search</button>
+        </div>
+    </nav>
     <div class="container">
         <div class="row tm-register-row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-register-col-l">
@@ -98,9 +113,8 @@
             </div>
         </footer>
     </div>
-
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+    <script src="../public/js/jquery-3.2.1.slim.min.js""></script>
+    <script src="../public/js/materialize.min.js"></script>
     <script>
         $(document).ready(function () {
             $('select').formSelect();
