--- a/views/survey.html
+++ b/views/survey.html
@@ -18,6 +18,7 @@
 </head>
 
 <body id="survey" class="font-weight-light">
+    <!-- Nav Bar -->
     <nav class="navbar background">
         <!-- we have used list tag that is ul 
              to list the items-->
@@ -26,6 +27,7 @@
             <li><a href="../views/login.html">Login</a></li>
             <li><a href="../views/signup.html">Sign-Up</a></li>
             <li><a href="../views/survey.html">Survey</a></li>
+            <li><a href="..//views/register.html">Update</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -183,8 +185,8 @@
         </footer>
     </div>
 
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
-    <script src="js/materialize.min.js"></script>
+    <script src="../public/js/jquery-3.2.1.slim.min.js""></script>
+    <script src="../public/js/materialize.min.js"></script>
     <script>
         $(document).ready(function () {
             $('select').formSelect();
