--- a/views/register.html
+++ b/views/register.html
@@ -22,7 +22,7 @@
             <li><a href="../views/login.html">Login</a></li>
             <li><a href="../views/signup.html">Sign-Up</a></li>
             <li><a href="../views/survey.html">Survey</a></li>
-            <li><a href="..//views/register.html">Update</a></li>
+            <li><a href="../views/register.html">Update</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -32,22 +32,22 @@
             <button class="btn btn-sm">Search</button>
         </div>
     </nav>
-    <div class="container">
+    <div class="container tm-bg-black">
         <div class="row tm-register-row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-register-col-l">
                 <form action="" method="post">
                     <div class="mb-2">
                         <label class="mr-4">
                             <input class="with-gap" name="title" type="radio" value="mr" />
-                            <span>Mr.</span>
+                            <span>Male</span>
                         </label>
                         <label class="mr-4">
                             <input class="with-gap" name="title" type="radio" value="ms" />
-                            <span>Ms.</span>
+                            <span>Female</span>
                         </label>
                         <label>
                             <input class="with-gap" name="title" type="radio" value="mrs" />
-                            <span>Mrs.</span>
+                            <span>Unisex</span>
                         </label>
                     </div>
 
@@ -67,21 +67,21 @@
                         <input placeholder="Address" id="address" name="address" type="text" class="validate">
                     </div>
                     <div class="input-field">
-                        <input placeholder="District/Province" id="district" name="district" type="text" class="validate">
+                        <input placeholder="State" id="state" name="state" type="text" class="validate">
                     </div>
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 pl-0 tm-pr-xs-0">
-                            <select name="city">
-                                <option value="-">Your City</option>
-                                <option value="Bangkok">Bangkok</option>
-                                <option value="Yangon">Yangon</option>
-                                <option value="Mumbai">Mumbai</option>
-                                <option value="Singapore">Singapore</option>
+                            <select name="Body Type">
+                                <option value="-">Body-Type</option>
+                                <option value="Bangkok">Athletic</option>
+                                <option value="Yangon">Overweight</option>
+                                <option value="Mumbai">Average</option>
+                                <option value="Singapore">Lean</option>
                             </select>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-6 pr-0 tm-pl-xs-0">
                             <div class="input-field">
-                                <input placeholder="Zip Code" id="zipcode" name="zipcode" type="text" class="validate">
+                                <input placeholder="Weight" id="weight" name="weight" type="text" >
                             </div>
                         </div>
                     </div>
@@ -105,15 +105,12 @@
         <footer class="row tm-mt-big mb-3">
             <div class="col-xl-12">
                 <p class="text-center grey-text text-lighten-2 tm-footer-text-small">
-                    Copyright &copy; 2018 Company Name 
-                    
-                    - <a rel="nofollow" href="http://www.tooplate.com/view/2105-input">Input</a> by 
-                    <a rel="nofollow" href="http://tooplate.com" class="tm-footer-link">Tooplate</a>
+                    Muscle Maker &copy; 2021 Created by Nicholas Ciavone - CSI 2520: 12/10/2021
                 </p>
             </div>
         </footer>
     </div>
-    <script src="../public/js/jquery-3.2.1.slim.min.js""></script>
+    <script src="../public/js/jquery-3.2.1.slim.min.js"></script>
     <script src="../public/js/materialize.min.js"></script>
     <script>
         $(document).ready(function () {
