--- a/views/signup.html
+++ b/views/signup.html
@@ -26,7 +26,7 @@
             <li><a href="../views/login.html">Login</a></li>
             <li><a href="../views/signup.html">Sign-Up</a></li>
             <li><a href="../views/survey.html">Survey</a></li>
-            <li><a href="..//views/register.html">Update</a></li>
+            <li><a href="../views/register.html">Update</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -77,7 +77,7 @@
         </footer>
     </div>
 
-    <script src="../public/js/jquery-3.2.1.slim.min.js""></script>
+    <script src="../public/js/jquery-3.2.1.slim.min.js"></script>
     <script src="../public/js/materialize.min.js"></script>
     <script>
         $(document).ready(function () {
