--- a/views/survey.html
+++ b/views/survey.html
@@ -27,7 +27,7 @@
             <li><a href="../views/login.html">Login</a></li>
             <li><a href="../views/signup.html">Sign-Up</a></li>
             <li><a href="../views/survey.html">Survey</a></li>
-            <li><a href="..//views/register.html">Update</a></li>
+            <li><a href="../views/register.html">Update</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -176,16 +176,13 @@
         <footer class="row tm-mt-big mb-3">
             <div class="col-xl-12">
                 <p class="text-center grey-text text-lighten-2 tm-footer-text-small">
-                    Copyright &copy; 2018 Company Name
-                    
-                    - <a rel="nofollow" href="http://www.tooplate.com/view/2105-input">Input</a> by 
-                    <a rel="nofollow" href="http://tooplate.com" class="tm-footer-link">Tooplate</a>
+                    Muscle Maker &copy; 2021 Created by Nicholas Ciavone - CSI 2520: 12/10/2021
                 </p>
             </div>
         </footer>
     </div>
 
-    <script src="../public/js/jquery-3.2.1.slim.min.js""></script>
+    <script src="../public/js/jquery-3.2.1.slim.min.js"></script>
     <script src="../public/js/materialize.min.js"></script>
     <script>
         $(document).ready(function () {
