--- a/views/login.html
+++ b/views/login.html
@@ -1,3 +1,13 @@
+<!--
+-----------------------------------------------------------------------------
+Name: login.html
+Author: @NCiavone
+Date Created: 12/3/21
+Purpose: The html file for login to MM account
+Notes:
+    -This is required to be under /views
+-----------------------------------------------------------------------------
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,11 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Form by Tooplate</title>
-	<!--
-    Template 2105 Input
-	http://www.tooplate.com/view/2105-input
-	-->
+    <title>Login Page</title>
     <link rel="stylesheet" href="../public/css/styleMM.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="bootstrap" href="../public/css/bootstrap.min.css">
@@ -22,11 +28,12 @@
         <!-- we have used list tag that is ul 
              to list the items-->
         <ul class="nav-list">
-            <li><a href="../views/index.ejs">Home</a></li>
-            <li><a href="../views/login.html">Login</a></li>
-            <li><a href="../views/signup.html">Sign-Up</a></li>
-            <li><a href="../views/survey.html">Survey</a></li>
-            <li><a href="../views/register.html">Update</a></li>
+            <li><a href="../index.ejs">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign-Up</a></li>
+            <li><a href="survey.html">Survey</a></li>
+            <li><a href="register.html">Update</a></li>
+            <li><a href="routines.html">Routines</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -55,9 +62,9 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-login-r">
                 <header class="font-weight-light tm-bg-black p-5 h-100">
-                    <h3 class="mt-0 text-white font-weight-light">Your Login</h3>
-                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                    <p class="mb-0">Vestibulum neque neque, porttitor quis lacinia eu, iaculis id dui. Mauris quis velit lectus.</p>
+                    <h3 class="mt-0 centerText tm-blue-text"><b>Your Login</b></h3>
+                    <p class = "centerText">Make sure to write down your email and password to avoid resetting your password as you can only use a password once..</p>
+                    <p class="mb-0 centerText"><b>NEVER</b> give anyone your password, a <b class = "tm-blue-text">Muscle Maker</b>&copy; service member will never ask for it.</p>
                 </header>
             </div>
         </div>
@@ -68,7 +75,7 @@
         </div>
         <footer class="row tm-mt-big mb-3">
             <div class="col-xl-12 text-center">
-                <p class="d-inline-block tm-bg-black white-text py-2 tm-px-5">
+                <p class="d-inline-block tm-bg-black white-text py-2 tm-px-5 centerText">
                     Muscle Maker &copy; 2021 Created by Nicholas Ciavone - CSI 2520: 12/10/2021
                 </p>
             </div>
