--- a/views/signup.html
+++ b/views/signup.html
@@ -1,3 +1,14 @@
+
+<!-------------------------------------------------------------------------------
+Name: signup.html
+Author: @NCiavone
+Date Created: 12/3/21
+Purpose: The html signup form
+Notes:
+    -This is required to be under /views
+    -NEEDS to be updated to an active applcation (.ejs) file.
+    -Create your Account
+------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,11 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Tooplate</title>
-	<!--
-    Template 2105 Input
-	http://www.tooplate.com/view/2105-input
-	-->
+    <title>Sign Up Page</title>
     <link rel="stylesheet" href="../public/css/styleMM.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
@@ -22,17 +29,18 @@
         <!-- we have used list tag that is ul 
              to list the items-->
         <ul class="nav-list">
-            <li><a href="../views/index.ejs">Home</a></li>
-            <li><a href="../views/login.html">Login</a></li>
-            <li><a href="../views/signup.html">Sign-Up</a></li>
-            <li><a href="../views/survey.html">Survey</a></li>
-            <li><a href="../views/register.html">Update</a></li>
+            <li><a href="../index.ejs">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign-Up</a></li>
+            <li><a href="survey.html">Survey</a></li>
+            <li><a href="register.html">Update</a></li>
+            <li><a href="routines.html">Routines</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
         <div class="rightNav">
       <!-- the value that search bar will take is text -->
-            <input type="text" name="search" id="search" />
+            <input placeholder = "Search" type="text" name="search" id="search" />
             <button class="btn btn-sm">Search</button>
         </div>
     </nav>
@@ -41,8 +49,8 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <header class="mb-5">
-                    <h3 class="mt-0 orange-text">Sign-up Form</h3>
-                    <p class="grey-text mb-4">You can create a Muscle Maker&copy; account here! .</p>
+                    <h3 class="tm-blue-text"><b>Sign-up Form</b></h3>
+                    <p class="grey-text mb-4">You can create a <b class = "tm-blue-text">Muscle Maker</b>&copy; account here! .</p>
                 </header>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -70,7 +78,7 @@
         </div>
         <footer class="row tm-mt-big mb-3">
             <div class="col-xl-12">
-                <p class="text-center grey-text text-lighten-2 tm-footer-text-small">
+                <p class="text-center grey-text text-lighten-2 tm-footer-text-small centerText">
                     Muscle Maker &copy; 2021 Created by Nicholas Ciavone - CSI 2520: 12/10/2021
                 </p>
             </div>
