--- a/views/survey.html
+++ b/views/survey.html
@@ -1,3 +1,14 @@
+<!--
+-----------------------------------------------------------------------------
+Name: survey.html
+Author: @NCiavone
+Date Created: 12/2/21
+Purpose: The html file for sending in comments to service provider.
+Notes:
+    -This is required to be under /views
+    - CONNECT to MySQL database!
+-----------------------------------------------------------------------------
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,12 +16,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Survey Questionnaire Form by Tooplate</title>
-	<!--
-    Template 2105 Input
-	http://www.tooplate.com/view/2105-input
-	-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
+    <title>User Survey</title>
     <link rel="stylesheet" href="../public/css/styleMM.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
     <link rel="bootstrap" href="../public/css/bootstrap.min.css">
@@ -23,11 +29,12 @@
         <!-- we have used list tag that is ul 
              to list the items-->
         <ul class="nav-list">
-            <li><a href="../views/index.ejs">Home</a></li>
-            <li><a href="../views/login.html">Login</a></li>
-            <li><a href="../views/signup.html">Sign-Up</a></li>
-            <li><a href="../views/survey.html">Survey</a></li>
-            <li><a href="../views/register.html">Update</a></li>
+            <li><a href="../index.ejs">Home</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign-Up</a></li>
+            <li><a href="survey.html">Survey</a></li>
+            <li><a href="register.html">Update</a></li>
+            <li><a href="routines.html">Routines</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -42,7 +49,7 @@
         <div class="row">
             <div class="col-12">
                 <header class="mt-5 mb-5 text-center">
-                    <h1 class="font-weight-light tm-form-title">Your Questionnaire Design</h1>
+                    <h1 class="font-weight-light tm-form-title centerText tm-blue-text">Your Questionnaire Design</h1>
                     <p class="tm-form-description">Sed nunc leo, ullamcorper in facilisis feugiat, pulvinar sed est. Mauris varius sem erat, at faucibus
                         quam hendrerit eu. Quisque vel malesuada tortor.</p>
                 </header>
