--- a/views/routines.html
+++ b/views/routines.html
@@ -28,7 +28,7 @@ Notes:
         <!-- we have used list tag that is ul 
              to list the items-->
         <ul class="nav-list">
-            <li><a href="../index.ejs">Home</a></li>
+            <li><a href="index.ejs">Home</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="signup.html">Sign-Up</a></li>
             <li><a href="survey.html">Survey</a></li>
@@ -48,7 +48,8 @@ Notes:
         <div class="col-12">
             <header class="mt-5 mb-5 text-center">
                 <h1 class="font-weight-light tm-form-title centerText tm-blue-text">Your Routines</h1>
-                <p class="tm-form-description">Here is where the <b class ="tm-blue-text">Muscle Maker</b>&copy; routines will be and to update your account information for new routines click <a href="../views/signup.html">here</a></p>
+                <p class="tm-form-description centerText">Here is where the <b class ="tm-blue-text">Muscle Maker</b>&copy; routines will be! </p>
+                <p class="tm-form-description small">To update your account information for new routines click <a href="../views/signup.html">here</a></p>
             </header>
             <form action="" method="post">
                 <div class="tm-bg-black tm-form-block">
