--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,9 +20,9 @@ Notes:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muscle Maker</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-    <link rel="stylesheet" href="public/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/css/materialize.min.css">
-    <link rel="stylesheet" href="public/css/styleMM.css">
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/css/materialize.min.css">
+    <link rel="stylesheet" href="../public/css/styleMM.css">
     <!--This is from Font Awesome-->
     <script src="https://kit.fontawesome.com/4d808d741c.js" crossorigin="anonymous"></script>
 
@@ -48,19 +48,19 @@ Notes:
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 centerText">
                 <ul class="list-group tm-home-list tm-bg-black font-weight-light">
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views/register.html" class="tm-white-text">Update</a>
+                        <a href="../views/register.html" class="tm-white-text">Update</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views/signup.html" class="tm-white-text">Sign Up</a>
+                        <a href="signup.html" class="tm-white-text">Sign Up</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views/login.html" class="tm-white-text">Login</a>
+                        <a href="login.html" class="tm-white-text">Login</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views/survey.html" class="tm-white-text">Survey</a>
+                        <a href="survey.html" class="tm-white-text">Survey</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="views/routines.html" class="tm-white-text">Routines</a>
+                        <a href="routines.html" class="tm-white-text">Routines</a>
                     </li>
                 </ul>
             </div>
