--- a/views/index.html
+++ b/views/index.html
@@ -5,18 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Input HTML Form Pack by Tooplate</title>
-    <!--
-
-    Template 2105 Input
-
-	http://www.tooplate.com/view/2105-input
-
-    -->
+    <title>HTML Home</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/materialize.min.css">
-    <link rel="stylesheet" href="css/tooplate.css">
+    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/css/materialize.min.css">
+    <link rel="stylesheet" href="../public/css/styleMM.css">
 </head>
 
 <body id="home">
@@ -39,7 +32,7 @@
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                 <ul class="list-group tm-home-list tm-bg-black font-weight-light">
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="register.html" class="tm-white-text">01. Register</a>
+                        <a href="../views/" class="tm-white-text">01. Register</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
                         <a href="signup.html" class="tm-white-text">02. Sign Up</a>
