--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@ Notes:
         </div>
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                <div class="tm-home-left mt-3 tm-bg-black font-weight-light">
+                <div class="tm-home-left mt-3 tm-bg-black font-weight-light centerText">
                     <p class="tm-mb-35"><b class ="tm-blue-text">Muscle Maker</b>&copy; is designed to help individuals with minimal strength training experince or no access to a personal trainer, get a meaningful and safe wokrkout.</p>
                     <p class="tm-mb-35">For best results, please create an account with most pertinent data possible.</p>
                     <p>Thank you!</p>
@@ -48,19 +48,19 @@ Notes:
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 centerText">
                 <ul class="list-group tm-home-list tm-bg-black font-weight-light">
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="../views/register.html" class="tm-white-text">Update</a>
+                        <a href="../views/register.html" class="external" class="tm-white-text">Update</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="signup.html" class="tm-white-text">Sign Up</a>
+                        <a href="signup.html" class="external" class="tm-white-text">Sign Up</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="login.html" class="tm-white-text">Login</a>
+                        <a href="login.html" class="external" class="tm-white-text">Login</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="survey.html" class="tm-white-text">Survey</a>
+                        <a href="survey.html" class="external" class="tm-white-text">Survey</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="routines.html" class="tm-white-text">Routines</a>
+                        <a href="routines.html" class="external" class="tm-white-text">Routines</a>
                     </li>
                 </ul>
             </div>
