my hopes and dreams

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,10 +48,10 @@ Notes:
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 centerText">
                 <ul class="list-group tm-home-list tm-bg-black font-weight-light">
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="../views/register.html" class="external" class="tm-white-text">Update</a>
+                        <a href="../views/register.ejs" class="external" class="tm-white-text">Update</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="signup.html" class="external" class="tm-white-text">Sign Up</a>
+                        <a href="signup.ejs" class="external" class="tm-white-text">Sign Up</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
                         <a href="login.html" class="external" class="tm-white-text">Login</a>
@@ -60,7 +60,7 @@ Notes:
                         <a href="survey.html" class="external" class="tm-white-text">Survey</a>
                     </li>
                     <li class="d-flex justify-content-between align-items-center">
-                        <a href="routines.html" class="external" class="tm-white-text">Routines</a>
+                        <a href="routines.ejs" class="external" class="tm-white-text">Routines</a>
                     </li>
                 </ul>
             </div>
