--- a/views/login.html
+++ b/views/login.html
@@ -30,10 +30,10 @@ Notes:
         <ul class="nav-list">
             <li><a href="index.ejs">Home</a></li>
             <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Sign-Up</a></li>
+            <li><a href="signup.ejs">Sign-Up</a></li>
             <li><a href="survey.html">Survey</a></li>
-            <li><a href="register.html">Update</a></li>
-            <li><a href="routines.html">Routines</a></li>
+            <li><a href="register.ejs">Update</a></li>
+            <li><a href="routines.ejs">Routines</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
