--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,10 +30,10 @@ Notes:
         <ul class="nav-list">
             <li><a href="index.ejs">Home</a></li>
             <li><a href="login.html">Login</a></li>
-            <li><a href="signup.html">Sign-Up</a></li>
+            <li><a href="signup.ejs">Sign-Up</a></li>
             <li><a href="survey.html">Survey</a></li>
-            <li><a href="register.html">Update</a></li>
-            <li><a href="routines.html">Routines</a></li>
+            <li><a href="register.ejs">Update</a></li>
+            <li><a href="routines.ejs">Routines</a></li>
         </ul>
         <!-- we have used rightnav in order to design
              the seachbar properly by using CSS-->
@@ -46,7 +46,7 @@ Notes:
     <div class="container tm-bg-black">
         <div class="row tm-register-row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 tm-register-col-l">
-                <form action="" method="post">
+                <form action="/updateperson/" method="post" id ="update">
                     <div class="mb-2">
                         <label class="mr-4">
                             <input class="with-gap" name="title" type="radio" value="mr" />
@@ -73,6 +73,9 @@ Notes:
                     </div>
                     <div class="input-field">
                         <input placeholder="Mobile" id="mobile" name="mobile" type="text" class="validate">
+                    </div>
+                    <div class="input-field">
+                        <input placeholder="Password" id="pass" name="pass" type="text" class="validate">
                     </div>
                     <div class="input-field">
                         <input placeholder="Address" id="address" name="address" type="text" class="validate">
